force-app/main/default/objects/Activity/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <label>Requirement</label>
    <type>TextArea</type>
    <description>Activities (Task/Event) do not support Long Text Area; using Text Area (255 chars) instead.</description>
</CustomField>