force-app/main/default/objects/Activity/fields/Worker_Response__c.field-meta.xml
<CustomField>
    <fullName>Worker_Response__c</fullName>
    <label>Worker Response (Summary)</label>
    <type>TextArea</type>
    <inlineHelpText>Short summary only (255 chars). For the full long-form response, use the related Task Detail record on the Opportunity (Task Details related list).</inlineHelpText>
    <description>Short-form summary. Full long-form text lives in Task_Detail__c.Worker_Response__c (Long Text Area), since Activities do not support Long Text Area.</description>
</CustomField>